added lawn-basics pages

--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -123,27 +123,27 @@
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html" aria-label="What Happens If You Cut Grass Too Short"></a>
   <h2><a class="card-title-link" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">What Happens If You Cut Grass Too Short</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Grass cut too short does not fail instantly, but it enters a biological deficit that compounds stress, slows recovery, and increases vulnerability.</p>
   <a class="read-more" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html" aria-label="How Tall Grass Should Be Left After Mowing"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">How Tall Grass Should Be Left After Mowing</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Mowing height is a physiological control, not an aesthetic choice. This explains how remaining leaf height governs recovery and stress tolerance.</p>
   <a class="read-more" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-fast-grass-grows-by-season.html" aria-label="How Fast Grass Grows by Season"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-fast-grass-grows-by-season.html">How Fast Grass Grows by Season</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Seasonal growth changes reflect plant physiology, not calendar timing. This explains why grass accelerates, slows, or stalls across the year.</p>
   <a class="read-more" href="/lawn-basics/how-fast-grass-grows-by-season.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/does-grass-grow-at-night.html" aria-label="Does Grass Grow at Night"></a>
   <h2><a class="card-title-link" href="/lawn-basics/does-grass-grow-at-night.html">Does Grass Grow at Night</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Night growth is indirect. This explains how respiration, carbohydrate use, and temperature affect overnight grass growth.</p>
   <a class="read-more" href="/lawn-basics/does-grass-grow-at-night.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/can-grass-recover-after-being-scalped.html" aria-label="Can Grass Recover After Being Scalped"></a>
   <h2><a class="card-title-link" href="/lawn-basics/can-grass-recover-after-being-scalped.html">Can Grass Recover After Being Scalped</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Scalping is severe stress, not automatic failure. This explains when recovery is biologically possible and when damage becomes permanent.</p>
   <a class="read-more" href="/lawn-basics/can-grass-recover-after-being-scalped.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-to-fix-patchy-grass.html" aria-label="How to Fix Patchy Grass"></a>
