--- a/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
+++ b/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Tall Grass Should Be Left After Mowing</title>
-  <meta name="description" content="Post-mowing grass height determines photosynthetic capacity, root depth, soil temperature moderation, and long-term turf stability.">
+  <meta name="description" content="Residual grass height after mowing governs photosynthesis, root depth, soil temperature, and the plant’s capacity to tolerate stress.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="How Tall Grass Should Be Left After Mowing">
-  <meta property="og:description" content="Post-mowing grass height determines photosynthetic capacity, root depth, soil temperature moderation, and long-term turf stability.">
+  <meta property="og:description" content="Residual grass height after mowing governs photosynthesis, root depth, soil temperature, and the plant’s capacity to tolerate stress.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
 
   <!-- Google tag -->
@@ -62,56 +62,42 @@
   <main class="container">
     <h1>How Tall Grass Should Be Left After Mowing</h1>
 
-<h2>Mowing height as an energy regulator</h2>
-<p>The height of grass left after mowing determines how much photosynthetic tissue remains.</p>
+<h2>Residual height as an energy constraint</h2>
+<p>The height of grass left after mowing determines how much photosynthetic surface remains available to the plant. This remaining leaf area controls daily carbohydrate production, which fuels respiration, root maintenance, and new growth.</p>
 <section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/how-grass-responds-to-stress.html">How Grass Responds to Stress</a></li><li><a href="/lawn-basics/difference-between-sod-seed-and-plugs.html">Difference Between Sod Seed and Plugs</a></li><li><a href="/lawn-basics/why-grass-near-fences-grows-differently.html">Why Grass Near Fences Grows Differently</a></li></ul></section>
 
-<p>This remaining leaf area controls carbohydrate production, which fuels root maintenance and future growth.</p>
-<p>Height decisions therefore regulate energy balance rather than surface appearance.</p>
+<p>Residual height therefore functions as an energy constraint. When sufficient leaf tissue remains, the plant maintains a positive energy balance. When too little remains, stored reserves are consumed to compensate.</p>
 
-<h2>Leaf area and photosynthetic capacity</h2>
-<p>Photosynthesis scales with available leaf surface.</p>
-<p>Higher residual height supports greater energy production per day.</p>
-<p>Lower residual height forces reliance on stored carbohydrates.</p>
+<h2>Photosynthetic capacity and recovery dynamics</h2>
+<p>Photosynthesis scales with leaf surface area. Taller residual height allows greater carbohydrate production per unit time, accelerating recovery after mowing.</p>
+<p>Lower residual height limits energy production and prolongs recovery, increasing the window during which the plant is vulnerable to stress.</p>
 
-<h2>Root depth feedback loop</h2>
-<p>Root systems adjust to sustained carbohydrate supply.</p>
-<p>Taller mowing heights promote deeper, denser roots.</p>
-<p>Short mowing heights encourage shallow root systems.</p>
+<h2>Root depth regulation</h2>
+<p>Root systems adjust to sustained carbohydrate availability. Lawns maintained at higher residual heights develop deeper, more extensive roots.</p>
+<p>Low residual height leads to progressive root contraction, reducing water and nutrient uptake capacity even when soil conditions are favorable.</p>
 
 <h2>Soil temperature moderation</h2>
-<p>Leaf canopy shades soil and reduces heat absorption.</p>
-<p>Moderated soil temperatures protect root enzymes and microbial activity.</p>
-<p>Low canopies increase thermal stress at the root zone.</p>
+<p>A taller leaf canopy shades the soil surface and buffers temperature extremes.</p>
+<p>Moderate soil temperatures preserve root function and microbial activity. Short canopies allow rapid soil heating, increasing metabolic stress.</p>
 
-<h2>Water balance effects</h2>
-<p>Taller turf reduces evaporation from soil surfaces.</p>
-<p>Short turf dries faster due to increased airflow.</p>
-<p>This difference affects irrigation demand and drought tolerance.</p>
+<h2>Water balance implications</h2>
+<p>Residual height influences evaporation rates. Taller turf reduces surface evaporation by limiting airflow at the soil surface.</p>
+<p>Short turf dries more quickly, increasing the frequency and intensity of water stress.</p>
 
-<h2>Stress tolerance thresholds</h2>
-<p>Grass with sufficient residual height tolerates mowing, traffic, and weather stress more effectively.</p>
-<p>Low residual height narrows the margin for recovery.</p>
-<p>Stress responses accumulate when height remains below recovery thresholds.</p>
+<h2>Stress tolerance margins</h2>
+<p>Grass maintained with adequate residual height has a wider margin for tolerating heat, drought, and mechanical stress.</p>
+<p>Low residual height narrows this margin, making minor stressors more consequential.</p>
 
-<h2>Species-specific tolerance</h2>
-<p>Different grasses evolved under different grazing pressures.</p>
-<p>Low-cut tolerance varies by species and growth habit.</p>
-<p>Ignoring biological tolerance leads to chronic stress even with proper timing.</p>
+<h2>Species-specific tolerance limits</h2>
+<p>Different grass species evolved under different grazing pressures and exhibit different tolerance ranges.</p>
+<p>Residual height that is sustainable for one species may produce chronic stress in another.</p>
 
-<h2>Height consistency versus adjustment</h2>
-<p>Consistent height supports stable energy balance.</p>
-<p>Sudden height reductions create abrupt deficits.</p>
-<p>Gradual seasonal adjustment aligns better with growth physiology.</p>
-
-<h2>Related guides</h2>
-<p>What Happens If You Cut Grass Too Short</p>
-<p>How Often Grass Should Be Mowed</p>
-<p>Can Grass Recover After Being Scalped</p>
+<h2>Consistency versus abrupt change</h2>
+<p>Stable residual height supports predictable energy balance.</p>
+<p>Abrupt reductions force rapid carbohydrate reallocation and destabilize growth patterns.</p>
 
 <h2>Conclusion</h2>
-<p>The correct mowing height is defined by physiological recovery capacity.</p>
-<p>Leaving adequate leaf height preserves energy balance and long-term turf resilience.</p>
+<p>The biologically appropriate mowing height is defined by the plant’s ability to maintain positive energy balance and root integrity. Residual height is therefore a structural determinant of long-term turf resilience, not a cosmetic preference.</p>
   </main>
 
   <footer class="site-footer">
