--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -123,12 +123,12 @@
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html" aria-label="What Happens If You Cut Grass Too Short"></a>
   <h2><a class="card-title-link" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">What Happens If You Cut Grass Too Short</a></h2>
-  <p class="card-blurb">Grass cut too short does not fail instantly, but it enters a biological deficit that compounds stress, slows recovery, and increases vulnerability.</p>
+  <p class="card-blurb">Grass cut too short does not fail immediately, but enters a physiological deficit that compounds stress and reduces long-term stability.</p>
   <a class="read-more" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html" aria-label="How Tall Grass Should Be Left After Mowing"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">How Tall Grass Should Be Left After Mowing</a></h2>
-  <p class="card-blurb">Mowing height is a physiological control, not an aesthetic choice. This explains how remaining leaf height governs recovery and stress tolerance.</p>
+  <p class="card-blurb">Mowing height is a physiological control variable that determines recovery speed and long-term turf stability.</p>
   <a class="read-more" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-fast-grass-grows-by-season.html" aria-label="How Fast Grass Grows by Season"></a>
