--- a/lawn-basics/what-happens-if-you-cut-grass-too-short.html
+++ b/lawn-basics/what-happens-if-you-cut-grass-too-short.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>What Happens If You Cut Grass Too Short</title>
-  <meta name="description" content="Cutting grass too short disrupts photosynthesis, reduces carbohydrate reserves, exposes crowns, and weakens roots, often triggering decline rather than improvement.">
+  <meta name="description" content="Cutting grass too short disrupts photosynthesis, depletes carbohydrate reserves, alters root structure, and increases environmental stress on crowns and soil.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/what-happens-if-you-cut-grass-too-short.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="What Happens If You Cut Grass Too Short">
-  <meta property="og:description" content="Cutting grass too short disrupts photosynthesis, reduces carbohydrate reserves, exposes crowns, and weakens roots, often triggering decline rather than improvement.">
+  <meta property="og:description" content="Cutting grass too short disrupts photosynthesis, depletes carbohydrate reserves, alters root structure, and increases environmental stress on crowns and soil.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/what-happens-if-you-cut-grass-too-short.html">
 
   <!-- Google tag -->
@@ -62,50 +62,39 @@
   <main class="container">
     <h1>What Happens If You Cut Grass Too Short</h1>
 
-<h2>Low cutting as a biological disturbance</h2>
-<p>Grass survives mowing because its growing point is located near the crown rather than at the leaf tip. Cutting height determines how much photosynthetic tissue remains after mowing. When grass is cut too short, the reduction in leaf area is severe enough to disrupt normal energy production.</p>
+<h2>Short cutting as a physiological disturbance</h2>
+<p>Grass tolerates mowing because its growing points are located near the crown rather than at the leaf tips. That tolerance, however, is conditional. Cutting height determines how much photosynthetic tissue remains after mowing, and excessively low cuts remove a disproportionate share of the plant’s energy-producing surface.</p>
 <section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/best-grass-for-shady-lawns.html">Best Grass for Shady Lawns</a></li><li><a href="/lawn-basics/how-slope-affects-grass-growth.html">How Slope Affects Grass Growth</a></li><li><a href="/lawn-basics/why-grass-fails-in-new-construction-yards.html">Why Grass Fails in New Construction Yards</a></li></ul></section>
 
-<p>This disruption does not usually kill the plant immediately. Instead, it shifts the plant into a recovery state where stored carbohydrates must be used to rebuild lost tissue. Repeated or severe low cuts compound this energy deficit.</p>
+<p>When grass is cut too short, the plant does not respond with immediate failure. Instead, it enters a recovery state in which stored carbohydrates are diverted from roots and crowns to rebuild lost leaf tissue. This shift changes the plant’s internal energy balance and increases vulnerability to additional stress.</p>
 
-<h2>Photosynthesis and carbohydrate imbalance</h2>
-<p>Leaf blades are the primary site of photosynthesis. Removing a large portion of this surface sharply reduces carbohydrate production.</p>
-<p>Grass compensates by drawing on stored carbohydrates held in roots and crowns. These reserves are finite and refill only when sufficient leaf area exists.</p>
-<p>When cutting height remains too low, reserves are depleted faster than they are restored, leading to gradual weakening rather than sudden failure.</p>
+<h2>Photosynthesis loss and carbohydrate depletion</h2>
+<p>Leaf blades are the sole site of photosynthesis in turfgrass. Removing most of that surface sharply reduces the plant’s ability to produce carbohydrates, which are required for growth, respiration, and repair.</p>
+<p>To compensate, grass draws on stored carbohydrates held in crowns and roots. These reserves are finite and are replenished only when sufficient leaf area exists to support surplus photosynthesis. When low cutting is repeated, reserves decline faster than they are restored.</p>
+<p>The visible effect is slower regrowth, reduced density, and increasing sensitivity to environmental fluctuations.</p>
 
-<h2>Crown exposure and thermal stress</h2>
-<p>The crown sits at or just above the soil surface and contains the plant’s meristematic tissue.</p>
-<p>Short cuts expose the crown to direct sunlight, increased airflow, and higher surface temperatures.</p>
-<p>Thermal and desiccation stress at the crown interferes with cell division and slows regrowth.</p>
+<h2>Crown exposure and surface stress</h2>
+<p>The crown contains the plant’s meristematic tissue and sits at or just above the soil surface. Under normal mowing heights, surrounding leaf tissue moderates temperature and moisture conditions at this level.</p>
+<p>Excessively short cuts expose crowns to direct solar radiation, increased airflow, and rapid moisture loss. These conditions interfere with cell division and increase the likelihood of thermal injury, especially during warm weather.</p>
 
-<h2>Root system contraction</h2>
-<p>Root growth is regulated by carbohydrate availability. When leaf area is reduced, root mass contracts in response.</p>
-<p>Shallower roots reduce access to water and nutrients, increasing sensitivity to drought and heat.</p>
-<p>This root contraction explains why repeatedly low-cut lawns decline even when irrigation remains unchanged.</p>
+<h2>Root contraction and reduced uptake capacity</h2>
+<p>Root growth is regulated by carbohydrate availability. When photosynthetic output drops, roots contract in response, reducing total root mass and depth.</p>
+<p>Shallower root systems have limited access to soil moisture and nutrients, increasing stress even when irrigation or fertilization remains unchanged. This feedback loop explains why low-cut lawns often decline gradually rather than abruptly.</p>
 
 <h2>Soil temperature amplification</h2>
-<p>Taller turf shades soil and moderates temperature.</p>
-<p>Low cutting allows soil temperatures to rise more quickly during warm periods.</p>
-<p>Elevated root-zone temperatures impair enzyme function and reduce water uptake efficiency.</p>
+<p>Taller turf shades the soil surface and moderates root-zone temperature. Short turf allows more solar energy to reach the soil, accelerating heating.</p>
+<p>Elevated soil temperatures impair root enzyme activity and reduce water uptake efficiency. These effects compound carbohydrate stress and further slow recovery.</p>
 
-<h2>Mechanical stress accumulation</h2>
-<p>Low mowing heights reduce tolerance for uneven ground.</p>
-<p>Minor surface irregularities result in scalping, which removes crown-adjacent tissue.</p>
-<p>Each scalping event adds localized damage that recovers slowly.</p>
+<h2>Mechanical scalping and uneven damage</h2>
+<p>Low cutting heights reduce tolerance for surface irregularities. Minor variations in grade result in scalping, which removes tissue near or at the crown.</p>
+<p>Scalped areas recover slowly and create localized weak points that expand under repeated stress.</p>
 
-<h2>Stress signals versus permanent damage</h2>
-<p>Early symptoms include slowed regrowth and color loss.</p>
-<p>If carbohydrate depletion continues, thinning and bare areas appear.</p>
-<p>Permanent damage occurs only when crowns are destroyed or reserves are exhausted beyond recovery.</p>
-
-<h2>Related guides</h2>
-<p>How Short Is Too Short to Cut Grass</p>
-<p>Can Grass Recover After Being Scalped</p>
-<p>How Often Grass Should Be Mowed</p>
+<h2>Stress signals versus irreversible injury</h2>
+<p>Early symptoms of overly short cutting include delayed regrowth and loss of color. These indicate stress rather than death.</p>
+<p>Permanent damage occurs only when crowns are destroyed or carbohydrate reserves are depleted beyond recovery. Whether that threshold is crossed depends on duration, frequency, and environmental conditions.</p>
 
 <h2>Conclusion</h2>
-<p>Cutting grass too short creates an energy imbalance rather than immediate death.</p>
-<p>The long-term outcome depends on whether carbohydrate production is restored before structural damage accumulates.</p>
+<p>Cutting grass too short creates an internal energy deficit rather than immediate failure. The long-term outcome depends on whether photosynthetic capacity is restored before cumulative stress damages crowns and root systems.</p>
   </main>
 
   <footer class="site-footer">
