--- a/lawn-basics/can-grass-recover-after-being-scalped.html
+++ b/lawn-basics/can-grass-recover-after-being-scalped.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Can Grass Recover After Being Scalped</title>
-  <meta name="description" content="Grass can recover after scalping if crowns remain intact and carbohydrate reserves are sufficient to rebuild lost leaf tissue.">
+  <meta name="description" content="Grass can recover after scalping if crowns remain intact and carbohydrate reserves are sufficient to rebuild lost photosynthetic tissue.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Can Grass Recover After Being Scalped">
-  <meta property="og:description" content="Grass can recover after scalping if crowns remain intact and carbohydrate reserves are sufficient to rebuild lost leaf tissue.">
+  <meta property="og:description" content="Grass can recover after scalping if crowns remain intact and carbohydrate reserves are sufficient to rebuild lost photosynthetic tissue.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
 
   <!-- Google tag -->
@@ -62,56 +62,42 @@
   <main class="container">
     <h1>Can Grass Recover After Being Scalped</h1>
 
-<h2>What scalping does to the plant</h2>
-<p>Scalping removes nearly all photosynthetic tissue.</p>
+<h2>Scalping as extreme leaf removal</h2>
+<p>Scalping removes nearly all photosynthetic tissue, eliminating the plant’s ability to produce carbohydrates in the short term.</p>
 <section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/can-grass-survive-frost.html">Can Grass Survive Frost</a></li><li><a href="/lawn-basics/how-weather-affects-grass-growth.html">How Weather Affects Grass Growth</a></li><li><a href="/lawn-basics/how-fast-grass-grows-by-season.html">How Fast Grass Grows by Season</a></li></ul></section>
 
-<p>This forces the plant to rely entirely on stored carbohydrates.</p>
-<p>The crown becomes exposed to environmental stress.</p>
+<p>Recovery depends entirely on stored energy and the integrity of the crown.</p>
 
-<h2>Crown survival as the recovery limit</h2>
-<p>The crown contains the growth point.</p>
-<p>If the crown is intact, regrowth is possible.</p>
-<p>If the crown is damaged or desiccated, recovery cannot occur.</p>
+<h2>Crown survival as the recovery threshold</h2>
+<p>The crown contains the growth point from which new leaves emerge.</p>
+<p>If the crown remains intact and hydrated, regrowth is biologically possible.</p>
+<p>If the crown is damaged by heat, desiccation, or mechanical injury, recovery cannot occur.</p>
 
 <h2>Carbohydrate reserve depletion</h2>
-<p>Regrowth after scalping consumes stored energy.</p>
-<p>Repeated scalping events exhaust reserves.</p>
-<p>Once reserves are depleted, regrowth slows or stops.</p>
+<p>Regrowing leaf tissue requires significant energy.</p>
+<p>Stored carbohydrates are consumed rapidly after scalping.</p>
+<p>Repeated scalping events exhaust reserves and slow or prevent regrowth.</p>
 
 <h2>Root system response</h2>
-<p>Root mass shrinks following severe leaf loss.</p>
-<p>Reduced roots limit water and nutrient uptake.</p>
-<p>This feedback slows recovery further.</p>
+<p>Severe leaf loss triggers root contraction.</p>
+<p>Reduced root mass limits water and nutrient uptake.</p>
+<p>This feedback slows recovery even under favorable conditions.</p>
 
-<h2>Temperature and moisture effects</h2>
-<p>Cool, moist conditions reduce respiration demand.</p>
-<p>Hot, dry conditions accelerate reserve loss.</p>
-<p>Environmental context strongly affects outcome.</p>
+<h2>Environmental moderation of recovery</h2>
+<p>Cool temperatures and adequate moisture reduce respiration demand.</p>
+<p>Hot, dry conditions accelerate reserve loss and crown stress.</p>
+<p>Environmental context strongly influences outcomes.</p>
 
-<h2>Species-dependent recovery capacity</h2>
-<p>Some grasses evolved under grazing pressure.</p>
-<p>These species tolerate scalping better.</p>
-<p>Others decline rapidly after severe cuts.</p>
+<h2>Species-dependent tolerance</h2>
+<p>Some grasses evolved under grazing pressure and tolerate severe defoliation.</p>
+<p>Others lack sufficient reserve capacity and decline rapidly.</p>
 
-<h2>Stress accumulation versus single events</h2>
-<p>One scalping event is often survivable.</p>
-<p>Repeated events compound damage.</p>
-<p>Recovery probability declines with each occurrence.</p>
-
-<h2>Distinguishing recovery from replacement</h2>
-<p>Slow regrowth indicates depleted reserves.</p>
-<p>Persistent bare crowns signal failure.</p>
-<p>Time, not appearance alone, reveals outcome.</p>
-
-<h2>Related guides</h2>
-<p>What Happens If You Cut Grass Too Short</p>
-<p>How Tall Grass Should Be Left After Mowing</p>
-<p>How Often Grass Should Be Mowed</p>
+<h2>Distinguishing recovery from failure</h2>
+<p>Gradual regrowth indicates surviving crowns and remaining reserves.</p>
+<p>Persistent bare crowns indicate irreversible damage.</p>
 
 <h2>Conclusion</h2>
-<p>Grass recovery after scalping depends on crown survival and energy reserves.</p>
-<p>Understanding these limits explains why some lawns rebound while others do not.</p>
+<p>Grass recovery after scalping is possible but limited. Crown survival and energy reserves determine whether regrowth occurs or decline becomes permanent.</p>
   </main>
 
   <footer class="site-footer">
