--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -133,17 +133,17 @@
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-fast-grass-grows-by-season.html" aria-label="How Fast Grass Grows by Season"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-fast-grass-grows-by-season.html">How Fast Grass Grows by Season</a></h2>
-  <p class="card-blurb">Seasonal growth changes reflect plant physiology, not calendar timing. This explains why grass accelerates, slows, or stalls across the year.</p>
+  <p class="card-blurb">Seasonal growth patterns reflect plant energy economics, not calendar timing or care intensity.</p>
   <a class="read-more" href="/lawn-basics/how-fast-grass-grows-by-season.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/does-grass-grow-at-night.html" aria-label="Does Grass Grow at Night"></a>
   <h2><a class="card-title-link" href="/lawn-basics/does-grass-grow-at-night.html">Does Grass Grow at Night</a></h2>
-  <p class="card-blurb">Night growth is indirect. This explains how respiration, carbohydrate use, and temperature affect overnight grass growth.</p>
+  <p class="card-blurb">Apparent nighttime growth reflects carbohydrate use, respiration rates, and temperature effects rather than energy production.</p>
   <a class="read-more" href="/lawn-basics/does-grass-grow-at-night.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/can-grass-recover-after-being-scalped.html" aria-label="Can Grass Recover After Being Scalped"></a>
   <h2><a class="card-title-link" href="/lawn-basics/can-grass-recover-after-being-scalped.html">Can Grass Recover After Being Scalped</a></h2>
-  <p class="card-blurb">Scalping is severe stress, not automatic failure. This explains when recovery is biologically possible and when damage becomes permanent.</p>
+  <p class="card-blurb">Scalping creates extreme energy stress. Recovery depends on crown survival, reserve availability, and environmental conditions.</p>
   <a class="read-more" href="/lawn-basics/can-grass-recover-after-being-scalped.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-to-fix-patchy-grass.html" aria-label="How to Fix Patchy Grass"></a>
