--- a/lawn-basics/does-grass-grow-at-night.html
+++ b/lawn-basics/does-grass-grow-at-night.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Does Grass Grow at Night</title>
-  <meta name="description" content="Grass does not photosynthesize at night, but growth processes continue as stored carbohydrates are used for cell expansion and repair.">
+  <meta name="description" content="Grass does not photosynthesize at night, but growth-related processes continue using carbohydrates produced during daylight hours.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/does-grass-grow-at-night.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Does Grass Grow at Night">
-  <meta property="og:description" content="Grass does not photosynthesize at night, but growth processes continue as stored carbohydrates are used for cell expansion and repair.">
+  <meta property="og:description" content="Grass does not photosynthesize at night, but growth-related processes continue using carbohydrates produced during daylight hours.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/does-grass-grow-at-night.html">
 
   <!-- Google tag -->
@@ -62,51 +62,37 @@
   <main class="container">
     <h1>Does Grass Grow at Night</h1>
 
-<h2>Photosynthesis versus growth</h2>
-<p>Photosynthesis requires light and stops at night.</p>
+<h2>Photosynthesis versus growth processes</h2>
+<p>Photosynthesis requires light and stops entirely after sunset. Growth, however, is the result of cell division and expansion, which do not require light directly.</p>
 <section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/how-heat-reflecting-surfaces-affect-grass.html">How Heat Reflecting Surfaces Affect Grass</a></li><li><a href="/lawn-basics/how-short-is-too-short-to-cut-grass.html">How Short Is Too Short to Cut Grass</a></li><li><a href="/lawn-basics/how-to-prepare-grass-for-summer.html">How to Prepare Grass for Summer</a></li><li><a href="/weeds-pests/how-seasons-affect-weed-growth.html">How Seasons Affect Weed Growth</a></li></ul></section>
 
-<p>Growth, however, is the result of cell division and expansion powered by stored carbohydrates.</p>
-<p>These processes can continue without light.</p>
+<p>This distinction explains why grass can appear to grow overnight despite producing no new energy during darkness.</p>
 
-<h2>Role of respiration after sunset</h2>
-<p>Respiration occurs continuously.</p>
-<p>At night, carbohydrates produced during the day are consumed to maintain tissue and support growth.</p>
-<p>Lower nighttime temperatures reduce respiration losses.</p>
-
-<h2>Cell expansion during cooler periods</h2>
-<p>Water availability and lower temperatures favor cell expansion.</p>
-<p>Grass blades often elongate overnight as cells absorb water.</p>
-<p>This creates the perception of night growth.</p>
-
-<h2>Carbohydrate allocation timing</h2>
-<p>Daytime photosynthesis builds reserves.</p>
-<p>Nighttime growth draws from these reserves.</p>
+<h2>Carbohydrate use after sunset</h2>
+<p>Carbohydrates produced during daylight are stored temporarily in leaves, crowns, and roots.</p>
+<p>At night, these reserves fuel respiration, tissue maintenance, and limited growth processes.</p>
 <p>Net growth depends on whether daytime production exceeded nighttime consumption.</p>
 
-<h2>Temperature effects on overnight growth</h2>
-<p>Warm nights increase respiration demand.</p>
-<p>High nighttime respiration reduces carbohydrate availability for growth.</p>
-<p>Cool nights improve growth efficiency.</p>
+<h2>Respiration rate and temperature</h2>
+<p>Respiration occurs continuously and increases with temperature.</p>
+<p>Cool nights reduce carbohydrate loss, improving growth efficiency.</p>
+<p>Warm nights accelerate respiration and reduce net growth potential.</p>
 
-<h2>Moisture and turgor pressure</h2>
-<p>Reduced evaporation at night increases leaf water content.</p>
-<p>Higher turgor pressure supports elongation.</p>
-<p>This effect is mechanical rather than photosynthetic.</p>
+<h2>Cell expansion and water relations</h2>
+<p>Lower nighttime evaporation increases leaf water content.</p>
+<p>Higher turgor pressure allows cells to elongate, contributing to blade extension.</p>
+<p>This mechanical expansion creates the perception of night growth.</p>
 
-<h2>Why night growth varies seasonally</h2>
-<p>In spring and fall, nights are cool and growth is efficient.</p>
-<p>In summer, warm nights reduce net growth.</p>
-<p>Seasonal patterns dominate daily timing.</p>
+<h2>Seasonal influence on nighttime growth</h2>
+<p>In spring and fall, cool nights and moderate days favor efficient carbohydrate use.</p>
+<p>In summer, warm nights limit recovery and growth despite adequate daylight.</p>
 
-<h2>Related guides</h2>
-<p>How Fast Grass Grows by Season</p>
-<p>How Grass Actually Grows</p>
-<p>How Often Grass Should Be Mowed</p>
+<h2>Limits of nighttime growth</h2>
+<p>No growth can occur if carbohydrate reserves are depleted.</p>
+<p>Extended stress during the day reduces the resources available for overnight processes.</p>
 
 <h2>Conclusion</h2>
-<p>Grass does not create energy at night.</p>
-<p>Observed overnight growth reflects the use of stored carbohydrates under favorable conditions.</p>
+<p>Grass does not generate energy at night. Observed nighttime growth reflects how efficiently stored carbohydrates are used under favorable conditions.</p>
   </main>
 
   <footer class="site-footer">
