--- a/lawn-basics/how-fast-grass-grows-by-season.html
+++ b/lawn-basics/how-fast-grass-grows-by-season.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Fast Grass Grows by Season</title>
-  <meta name="description" content="Grass growth speed changes by season as temperature, daylight, and respiration rates shift, altering photosynthesis and carbohydrate allocation.">
+  <meta name="description" content="Grass growth speed changes by season as temperature, daylight, and respiration alter the balance between photosynthesis and carbohydrate use.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-fast-grass-grows-by-season.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="How Fast Grass Grows by Season">
-  <meta property="og:description" content="Grass growth speed changes by season as temperature, daylight, and respiration rates shift, altering photosynthesis and carbohydrate allocation.">
+  <meta property="og:description" content="Grass growth speed changes by season as temperature, daylight, and respiration alter the balance between photosynthesis and carbohydrate use.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-fast-grass-grows-by-season.html">
 
   <!-- Google tag -->
@@ -62,55 +62,43 @@
   <main class="container">
     <h1>How Fast Grass Grows by Season</h1>
 
-<h2>Growth rate as a balance of energy inputs and losses</h2>
-<p>Grass growth speed reflects the balance between photosynthesis and respiration. Photosynthesis supplies carbohydrates, while respiration consumes them to maintain living tissue. Net growth occurs only when carbohydrate production exceeds maintenance demand.</p>
+<h2>Growth rate as an energy balance</h2>
+<p>Grass growth occurs only when carbohydrate production exceeds carbohydrate consumption. Photosynthesis supplies energy, while respiration consumes it to maintain existing tissue. Net growth depends on the difference between these two processes.</p>
 <section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/how-deep-grass-roots-really-go.html">How Deep Grass Roots Really Go</a></li><li><a href="/lawn-basics/when-a-lawn-reaches-the-end-of-its-life.html">When a Lawn Reaches the End of Its Life</a></li><li><a href="/lawn-basics/why-grass-gets-matted-down.html">Why Grass Gets Matted Down</a></li><li><a href="/weeds-pests/why-diseased-grass-turns-yellow.html">Why Diseased Grass Turns Yellow</a></li></ul></section>
 
-<p>Seasonal conditions alter this balance by changing temperature, light duration, and water availability. Growth rate therefore shifts predictably throughout the year.</p>
+<p>Seasonal changes alter this balance by shifting temperature, light duration, and moisture availability. Growth speed therefore varies predictably throughout the year.</p>
 
-<h2>Spring acceleration mechanisms</h2>
-<p>In spring, moderate temperatures increase photosynthetic efficiency while respiration remains relatively low.</p>
-<p>Soil moisture is often higher, improving nutrient transport and root activity.</p>
-<p>The result is rapid leaf expansion as carbohydrates accumulate faster than they are consumed.</p>
+<h2>Spring growth acceleration</h2>
+<p>In spring, moderate temperatures improve photosynthetic efficiency while keeping respiration relatively low. Enzymatic activity favors carbohydrate accumulation rather than rapid consumption.</p>
+<p>Soil moisture is often higher, improving nutrient transport and root activity. Together, these conditions produce rapid leaf expansion and visible growth.</p>
 
-<h2>Summer slowdown in cool-season grasses</h2>
-<p>High temperatures increase respiration rates, raising carbohydrate consumption.</p>
-<p>Photosynthesis becomes less efficient as enzymes approach thermal limits.</p>
-<p>Net growth slows or stops when respiration equals or exceeds energy production.</p>
+<h2>Summer stress and slowdown</h2>
+<p>As temperatures rise, respiration rates increase. Energy consumption accelerates even as photosynthesis becomes less efficient due to heat stress.</p>
+<p>For cool-season grasses, this shift often reduces net growth to near zero. Leaf production slows, and carbohydrate reserves are conserved rather than expanded.</p>
 
-<h2>Summer peak in warm-season grasses</h2>
-<p>Warm-season grasses evolved enzymes optimized for higher temperatures.</p>
-<p>Photosynthesis remains efficient under heat where cool-season grasses decline.</p>
-<p>This allows continued carbohydrate accumulation and active growth.</p>
+<h2>Warm-season summer adaptation</h2>
+<p>Warm-season grasses evolved photosynthetic enzymes optimized for higher temperatures. Their respiration-to-photosynthesis balance remains favorable during heat.</p>
+<p>This allows continued carbohydrate production and active growth during periods when cool-season grasses stall.</p>
 
 <h2>Fall regrowth dynamics</h2>
-<p>Cooling temperatures reduce respiration demand.</p>
-<p>Photosynthesis remains effective while stress pressure declines.</p>
-<p>Grass allocates carbohydrates to both leaf regrowth and root storage.</p>
+<p>Cooling temperatures reduce respiration demand while maintaining adequate photosynthetic capacity.</p>
+<p>Grass resumes growth and reallocates carbohydrates to both leaf tissue and root storage in preparation for dormancy.</p>
 
 <h2>Winter dormancy and metabolic suppression</h2>
-<p>Low temperatures slow enzyme activity.</p>
-<p>Photosynthesis drops sharply while respiration continues at a minimal level.</p>
-<p>Growth pauses as the plant prioritizes survival over expansion.</p>
+<p>Low temperatures slow enzymatic reactions that drive both photosynthesis and growth.</p>
+<p>Respiration continues at a minimal level, but carbohydrate production is insufficient to support expansion.</p>
+<p>Growth pauses as the plant prioritizes survival.</p>
 
-<h2>Daylength and hormonal signaling</h2>
-<p>Photoperiod influences growth hormones that regulate cell division.</p>
-<p>Shortening days contribute to growth slowdown even before temperatures drop severely.</p>
-<p>This effect reinforces seasonal transitions.</p>
+<h2>Daylength and hormonal regulation</h2>
+<p>Changing photoperiod influences growth hormones that regulate cell division.</p>
+<p>Shorter days reinforce temperature-driven growth slowdown, even before severe cold occurs.</p>
 
-<h2>Why growth appears uneven within seasons</h2>
-<p>Weather variability shifts the photosynthesis-respiration balance.</p>
-<p>Short heat waves or cool spells temporarily alter growth speed.</p>
-<p>Grass responds to sustained trends rather than isolated days.</p>
-
-<h2>Related guides</h2>
-<p>Does Grass Grow at Night</p>
-<p>How Often Grass Should Be Mowed</p>
-<p>How Grass Actually Grows</p>
+<h2>Why growth varies within the same season</h2>
+<p>Weather variability alters the photosynthesis–respiration balance.</p>
+<p>Short-term heat waves or cool periods temporarily change growth speed, but sustained trends dominate overall behavior.</p>
 
 <h2>Conclusion</h2>
-<p>Seasonal growth speed reflects changing energy economics within the plant.</p>
-<p>Understanding these shifts explains why mowing, color, and recovery vary throughout the year.</p>
+<p>Seasonal growth speed reflects shifting internal energy economics. Understanding these shifts explains why grass grows rapidly at some times and appears static at others.</p>
   </main>
 
   <footer class="site-footer">
