--- a/lawn-basics/what-happens-if-you-cut-grass-too-short.html
+++ b/lawn-basics/what-happens-if-you-cut-grass-too-short.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>What Happens If You Cut Grass Too Short</title>
-  <meta name="description" content="Cutting grass too short disrupts photosynthesis, depletes carbohydrate reserves, alters root structure, and increases environmental stress on crowns and soil.">
+  <meta name="description" content="Cutting grass too short disrupts photosynthesis, depletes carbohydrate reserves, alters root structure, and increases thermal and moisture stress at the crown.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/what-happens-if-you-cut-grass-too-short.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="What Happens If You Cut Grass Too Short">
-  <meta property="og:description" content="Cutting grass too short disrupts photosynthesis, depletes carbohydrate reserves, alters root structure, and increases environmental stress on crowns and soil.">
+  <meta property="og:description" content="Cutting grass too short disrupts photosynthesis, depletes carbohydrate reserves, alters root structure, and increases thermal and moisture stress at the crown.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/what-happens-if-you-cut-grass-too-short.html">
 
   <!-- Google tag -->
@@ -62,39 +62,34 @@
   <main class="container">
     <h1>What Happens If You Cut Grass Too Short</h1>
 
-<h2>Short cutting as a physiological disturbance</h2>
-<p>Grass tolerates mowing because its growing points are located near the crown rather than at the leaf tips. That tolerance, however, is conditional. Cutting height determines how much photosynthetic tissue remains after mowing, and excessively low cuts remove a disproportionate share of the plant’s energy-producing surface.</p>
+<h2>Short cutting as a physiological shock</h2>
+<p>Grass tolerates mowing because its growth points are located near the crown rather than at the leaf tips. That tolerance, however, depends on how much leaf tissue remains after mowing. When grass is cut too short, the reduction in photosynthetic surface is large enough to disrupt normal energy production.</p>
 <section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/best-grass-for-shady-lawns.html">Best Grass for Shady Lawns</a></li><li><a href="/lawn-basics/how-slope-affects-grass-growth.html">How Slope Affects Grass Growth</a></li><li><a href="/lawn-basics/why-grass-fails-in-new-construction-yards.html">Why Grass Fails in New Construction Yards</a></li></ul></section>
 
-<p>When grass is cut too short, the plant does not respond with immediate failure. Instead, it enters a recovery state in which stored carbohydrates are diverted from roots and crowns to rebuild lost leaf tissue. This shift changes the plant’s internal energy balance and increases vulnerability to additional stress.</p>
+<p>The plant does not respond with immediate death. Instead, it enters a recovery state in which internal resources are redirected away from roots and storage tissue toward rebuilding lost leaves. This shift increases vulnerability to additional stress and slows overall growth.</p>
 
 <h2>Photosynthesis loss and carbohydrate depletion</h2>
-<p>Leaf blades are the sole site of photosynthesis in turfgrass. Removing most of that surface sharply reduces the plant’s ability to produce carbohydrates, which are required for growth, respiration, and repair.</p>
-<p>To compensate, grass draws on stored carbohydrates held in crowns and roots. These reserves are finite and are replenished only when sufficient leaf area exists to support surplus photosynthesis. When low cutting is repeated, reserves decline faster than they are restored.</p>
-<p>The visible effect is slower regrowth, reduced density, and increasing sensitivity to environmental fluctuations.</p>
+<p>Photosynthesis occurs exclusively in leaf tissue. Removing a large portion of that tissue sharply reduces the plant’s ability to produce carbohydrates, which are required to fuel respiration, growth, and repair.</p>
+<p>To compensate, grass draws on stored carbohydrates held in crowns and roots. These reserves are finite and are replenished only when photosynthetic output exceeds daily metabolic demand. Repeated low cutting prevents that surplus from forming, leading to gradual reserve depletion.</p>
 
-<h2>Crown exposure and surface stress</h2>
-<p>The crown contains the plant’s meristematic tissue and sits at or just above the soil surface. Under normal mowing heights, surrounding leaf tissue moderates temperature and moisture conditions at this level.</p>
-<p>Excessively short cuts expose crowns to direct solar radiation, increased airflow, and rapid moisture loss. These conditions interfere with cell division and increase the likelihood of thermal injury, especially during warm weather.</p>
+<h2>Crown exposure and thermal stress</h2>
+<p>The crown contains the meristematic tissue responsible for new leaf production and sits at or just above the soil surface. Under adequate mowing height, surrounding leaves moderate temperature and moisture at this level.</p>
+<p>Excessively short cuts expose the crown to direct sunlight, increased airflow, and rapid moisture loss. These conditions interfere with cell division and increase the likelihood of heat injury, especially during warm weather.</p>
 
-<h2>Root contraction and reduced uptake capacity</h2>
-<p>Root growth is regulated by carbohydrate availability. When photosynthetic output drops, roots contract in response, reducing total root mass and depth.</p>
-<p>Shallower root systems have limited access to soil moisture and nutrients, increasing stress even when irrigation or fertilization remains unchanged. This feedback loop explains why low-cut lawns often decline gradually rather than abruptly.</p>
+<h2>Root contraction and uptake limitations</h2>
+<p>Root growth is regulated by carbohydrate availability. When photosynthetic output drops, root systems contract in response, reducing total root mass and depth.</p>
+<p>Shallower roots limit access to soil moisture and nutrients, increasing stress even when irrigation and fertility remain unchanged. This feedback explains why decline often continues weeks after cutting height is reduced.</p>
 
 <h2>Soil temperature amplification</h2>
-<p>Taller turf shades the soil surface and moderates root-zone temperature. Short turf allows more solar energy to reach the soil, accelerating heating.</p>
-<p>Elevated soil temperatures impair root enzyme activity and reduce water uptake efficiency. These effects compound carbohydrate stress and further slow recovery.</p>
+<p>Taller turf shades the soil surface and buffers temperature fluctuations. Short turf allows solar radiation to heat the soil more rapidly.</p>
+<p>Elevated soil temperatures impair root enzyme function and reduce water uptake efficiency, compounding carbohydrate stress and slowing recovery.</p>
 
-<h2>Mechanical scalping and uneven damage</h2>
-<p>Low cutting heights reduce tolerance for surface irregularities. Minor variations in grade result in scalping, which removes tissue near or at the crown.</p>
-<p>Scalped areas recover slowly and create localized weak points that expand under repeated stress.</p>
-
-<h2>Stress signals versus irreversible injury</h2>
-<p>Early symptoms of overly short cutting include delayed regrowth and loss of color. These indicate stress rather than death.</p>
-<p>Permanent damage occurs only when crowns are destroyed or carbohydrate reserves are depleted beyond recovery. Whether that threshold is crossed depends on duration, frequency, and environmental conditions.</p>
+<h2>Stress signals versus irreversible damage</h2>
+<p>Early effects of overly short cutting include delayed regrowth and loss of color, both of which indicate stress rather than death. These responses are reversible if photosynthetic capacity is restored.</p>
+<p>Permanent damage occurs only when crowns are destroyed or carbohydrate reserves are exhausted beyond recovery. Whether that threshold is crossed depends on duration, frequency, and environmental conditions.</p>
 
 <h2>Conclusion</h2>
-<p>Cutting grass too short creates an internal energy deficit rather than immediate failure. The long-term outcome depends on whether photosynthetic capacity is restored before cumulative stress damages crowns and root systems.</p>
+<p>Cutting grass too short creates an internal energy deficit rather than immediate failure. Long-term outcome depends on whether photosynthetic capacity and root structure are restored before cumulative stress damages the crown.</p>
   </main>
 
   <footer class="site-footer">
