--- a/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
+++ b/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Tall Grass Should Be Left After Mowing</title>
-  <meta name="description" content="Residual grass height after mowing governs photosynthesis, root depth, soil temperature, and the plant’s capacity to tolerate stress.">
+  <meta name="description" content="Residual grass height after mowing controls photosynthetic capacity, root depth, soil temperature moderation, and overall stress tolerance.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="How Tall Grass Should Be Left After Mowing">
-  <meta property="og:description" content="Residual grass height after mowing governs photosynthesis, root depth, soil temperature, and the plant’s capacity to tolerate stress.">
+  <meta property="og:description" content="Residual grass height after mowing controls photosynthetic capacity, root depth, soil temperature moderation, and overall stress tolerance.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
 
   <!-- Google tag -->
@@ -63,41 +63,33 @@
     <h1>How Tall Grass Should Be Left After Mowing</h1>
 
 <h2>Residual height as an energy constraint</h2>
-<p>The height of grass left after mowing determines how much photosynthetic surface remains available to the plant. This remaining leaf area controls daily carbohydrate production, which fuels respiration, root maintenance, and new growth.</p>
+<p>The height of grass left after mowing determines how much photosynthetic surface remains available to the plant. This remaining leaf area directly controls daily carbohydrate production, which fuels respiration, root maintenance, and new growth.</p>
 <section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/how-grass-responds-to-stress.html">How Grass Responds to Stress</a></li><li><a href="/lawn-basics/difference-between-sod-seed-and-plugs.html">Difference Between Sod Seed and Plugs</a></li><li><a href="/lawn-basics/why-grass-near-fences-grows-differently.html">Why Grass Near Fences Grows Differently</a></li></ul></section>
 
-<p>Residual height therefore functions as an energy constraint. When sufficient leaf tissue remains, the plant maintains a positive energy balance. When too little remains, stored reserves are consumed to compensate.</p>
+<p>Residual height therefore functions as an energy constraint. Adequate height allows the plant to maintain a positive energy balance, while insufficient height forces reliance on stored reserves.</p>
 
-<h2>Photosynthetic capacity and recovery dynamics</h2>
-<p>Photosynthesis scales with leaf surface area. Taller residual height allows greater carbohydrate production per unit time, accelerating recovery after mowing.</p>
-<p>Lower residual height limits energy production and prolongs recovery, increasing the window during which the plant is vulnerable to stress.</p>
+<h2>Photosynthetic capacity and recovery speed</h2>
+<p>Photosynthesis scales with available leaf surface area. Taller residual height supports greater carbohydrate production per day, allowing faster recovery after mowing.</p>
+<p>Lower residual height reduces energy production and prolongs recovery, increasing the window during which the plant is vulnerable to environmental stress.</p>
 
 <h2>Root depth regulation</h2>
-<p>Root systems adjust to sustained carbohydrate availability. Lawns maintained at higher residual heights develop deeper, more extensive roots.</p>
-<p>Low residual height leads to progressive root contraction, reducing water and nutrient uptake capacity even when soil conditions are favorable.</p>
+<p>Root systems respond to sustained carbohydrate availability. Lawns maintained at higher residual heights develop deeper, more extensive roots over time.</p>
+<p>When residual height is consistently low, root systems contract, reducing access to water and nutrients and increasing sensitivity to drought and heat.</p>
 
 <h2>Soil temperature moderation</h2>
-<p>A taller leaf canopy shades the soil surface and buffers temperature extremes.</p>
-<p>Moderate soil temperatures preserve root function and microbial activity. Short canopies allow rapid soil heating, increasing metabolic stress.</p>
+<p>A taller leaf canopy shades the soil surface and reduces temperature extremes in the root zone. This moderation preserves root enzyme activity and microbial processes.</p>
+<p>Short canopies allow rapid soil heating, increasing metabolic stress and reducing water uptake efficiency.</p>
 
 <h2>Water balance implications</h2>
-<p>Residual height influences evaporation rates. Taller turf reduces surface evaporation by limiting airflow at the soil surface.</p>
-<p>Short turf dries more quickly, increasing the frequency and intensity of water stress.</p>
+<p>Residual height influences evaporation rates at the soil surface. Taller turf limits airflow and reduces moisture loss.</p>
+<p>Short turf dries more quickly, increasing frequency and severity of water stress even under identical irrigation regimes.</p>
 
 <h2>Stress tolerance margins</h2>
-<p>Grass maintained with adequate residual height has a wider margin for tolerating heat, drought, and mechanical stress.</p>
-<p>Low residual height narrows this margin, making minor stressors more consequential.</p>
-
-<h2>Species-specific tolerance limits</h2>
-<p>Different grass species evolved under different grazing pressures and exhibit different tolerance ranges.</p>
-<p>Residual height that is sustainable for one species may produce chronic stress in another.</p>
-
-<h2>Consistency versus abrupt change</h2>
-<p>Stable residual height supports predictable energy balance.</p>
-<p>Abrupt reductions force rapid carbohydrate reallocation and destabilize growth patterns.</p>
+<p>Grass maintained with adequate residual height has greater tolerance for heat, traffic, and mowing stress. Energy reserves are replenished more consistently.</p>
+<p>Low residual height narrows this margin, making otherwise minor stressors more damaging.</p>
 
 <h2>Conclusion</h2>
-<p>The biologically appropriate mowing height is defined by the plant’s ability to maintain positive energy balance and root integrity. Residual height is therefore a structural determinant of long-term turf resilience, not a cosmetic preference.</p>
+<p>The biologically appropriate mowing height is defined by the plant’s ability to maintain positive energy balance and root integrity. Residual height is therefore a structural determinant of long-term turf resilience.</p>
   </main>
 
   <footer class="site-footer">
