changed the goddam style again baby

--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -128,7 +128,7 @@
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html" aria-label="How Tall Grass Should Be Left After Mowing"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">How Tall Grass Should Be Left After Mowing</a></h2>
-  <p class="card-blurb">Mowing height governs energy balance and long-term turf stability rather than surface appearance.</p>
+  <p class="card-blurb">Residual mowing height sets the turf’s energy budget, shaping carbohydrate supply, root structure, moisture balance, and recovery after heat or traffic stress.</p>
   <a class="read-more" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-fast-grass-grows-by-season.html" aria-label="How Fast Grass Grows by Season"></a>
