--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -123,12 +123,12 @@
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html" aria-label="What Happens If You Cut Grass Too Short"></a>
   <h2><a class="card-title-link" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">What Happens If You Cut Grass Too Short</a></h2>
-  <p class="card-blurb">Grass cut too short enters an energy deficit that compounds stress over time rather than causing immediate failure.</p>
+  <p class="card-blurb">Excessively short mowing creates an energy deficit that compounds over time, reducing root depth, stress tolerance, and recovery capacity.</p>
   <a class="read-more" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html" aria-label="How Tall Grass Should Be Left After Mowing"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">How Tall Grass Should Be Left After Mowing</a></h2>
-  <p class="card-blurb">Residual mowing height sets the turf’s energy budget, shaping carbohydrate supply, root structure, moisture balance, and recovery after heat or traffic stress.</p>
+  <p class="card-blurb">Mowing height sets the lawn’s energy budget, shaping recovery speed, root stability, and long-term resistance to environmental stress.</p>
   <a class="read-more" href="/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-fast-grass-grows-by-season.html" aria-label="How Fast Grass Grows by Season"></a>
