--- a/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
+++ b/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
@@ -68,7 +68,7 @@
 
 <h2>Leaf area, photosynthesis, and recovery dynamics</h2>
 <p>Photosynthetic output increases with leaf surface area and light interception, so taller residual height supports higher daily carbohydrate production. This surplus allows the plant to replace leaf tissue quickly after mowing while still allocating energy to roots and storage. Recovery is therefore faster, shortening the period during which the lawn is vulnerable to additional stress.</p>
-<p>When residual height is low, carbohydrate production is constrained while respiration continues unabated. Recovery slows, extending the duration of energy deficit after each cut. During this period, otherwise minor stressors such as brief heat or uneven moisture can have disproportionate effects. This interaction explains why mowing height and mowing frequency are closely linked in determining turf stability <a href="/lawn-basics/how-grass-responds-to-stress.html">How Grass Responds to Stress</a>.</p>
+<p>When residual height is low, carbohydrate production is constrained while respiration continues unabated. Recovery slows, extending the duration of energy deficit after each cut. During this period, otherwise minor stressors such as brief heat or uneven moisture can have disproportionate effects. This interaction explains why mowing height and mowing frequency are closely linked in determining turf stability .</p>
 
 <h2>Root structure and nutrient uptake stability</h2>
 <p>Root systems are supported by carbohydrates produced in the leaves, so sustained canopy height influences root mass and depth over time. Taller residual height typically promotes deeper rooting because energy supply remains adequate for root growth and maintenance. Deeper roots access a larger soil volume, stabilizing water availability and nutrient uptake across weather fluctuations.</p>
@@ -80,7 +80,7 @@
 
 <h2>Soil temperature buffering and moisture retention</h2>
 <p>A taller canopy shades the soil surface, reducing temperature extremes in the root zone and slowing evaporation. This buffering preserves root function and moderates midday stress, particularly in exposed sites. Soil conditions remain more stable between watering or rainfall events.</p>
-<p>Shorter canopies allow more radiation to reach the soil, increasing heat load and accelerating drying. Rapid wet-dry cycles impair gas exchange and root performance even when total water input is sufficient. Residual height therefore influences not only water demand but also the stability of the soil environment in which roots operate <a href="/lawn-basics/difference-between-sod-seed-and-plugs.html">Difference Between Sod Seed and Plugs</a>.</p>
+<p>Shorter canopies allow more radiation to reach the soil, increasing heat load and accelerating drying. Rapid wet-dry cycles impair gas exchange and root performance even when total water input is sufficient. Residual height therefore influences not only water demand but also the stability of the soil environment in which roots operate .</p>
 
 <h2>Mechanical stress and recovery capacity</h2>
 <p>Traffic and mowing impose repeated mechanical stress on turf, requiring continual repair of leaf tissue and protection of the crown. Taller residual height improves recovery capacity by leaving more photosynthetic tissue after disturbance. It also provides a physical buffer that absorbs minor damage without exposing the crown.</p>
